Fixed bugs with image and reset button

--- a/public/search.html
+++ b/public/search.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>popup</title>
+    <title>TV Series Saver | Search</title>
     <link href="css/search.css" rel="stylesheet" />
   </head>
   <body>
